# gpu_tests

./: .gitignore  CMakeLists.txt  init_cuda.cu  init_cuda.h  main.cpp  submit.slurm  test.py
wrapper/: CMakeLists.txt  pygpu_tests.pyx
